# design-patterns

./: README.md  pyproject.toml  settings.json
.github/workflows/: unittest.yml
src/: app.py  data_repository.py  settings_manager.py
src/core/: singleton.py
src/models/: company.py  exceptions.py  nomenclature.py  nomenclature_group.py  range_model.py  receipe.py  settings.py  warehouse.py
src/models/base/: base_logic.py  base_reference.py
tests/: test_settings.py
tests/models/: test_company.py  test_nomenclature.py  test_nomenclature_group.py  test_range_model.py  test_warehouse.py
