[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Никита <ruvemaximus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[tool.ruff]
line-length = 120
extend-exclude = ["**/migrations/*.py", "**/*.js", "**/*.css", "templates/"]


[tool.ruff.lint]
extend-select = ["I"]  # сортировка имбортов


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
